--- a/app/src/main/res/layout/activity_changepassword.xml
+++ b/app/src/main/res/layout/activity_changepassword.xml
@@ -12,7 +12,7 @@
         android:layout_height="wrap_content"
         android:background="@color/colorWhitish"
         android:fontFamily="sans-serif-condensed">
-        <android.support.v7.widget.Toolbar
+        <androidx.appcompat.widget.Toolbar
             android:id="@+id/myToolbar"
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
@@ -50,9 +50,7 @@
             android:gravity="center"
             android:layout_below="@+id/head"
             android:id="@+id/textView"
-            android:layout_alignParentRight="true"
             android:layout_alignParentEnd="true"
-            android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true"
             android:background="@drawable/info_text_view_border"
             android:padding="@dimen/page_info_padding"
@@ -74,9 +72,7 @@
             android:textColorHint="@color/colorBlackish"
             android:gravity="center"
             android:ems="10"
-            android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true"
-            android:layout_alignParentRight="true"
             android:layout_alignParentEnd="true"
             android:background="@drawable/form_field_rectangle"
             android:padding="@dimen/box_padding"
@@ -84,7 +80,8 @@
             android:layout_marginStart="@dimen/box_margin_left"
             android:layout_marginRight="@dimen/box_margin_left"
             android:layout_marginEnd="@dimen/box_margin_left"
-            android:textColor="@color/colorMKSDriveGreen"/>
+            android:textColor="@color/colorMKSDriveGreen"
+            android:autofillHints="" />
 
         <EditText
             android:id="@+id/newPass"
@@ -97,9 +94,7 @@
             android:textColorHint="@color/colorBlackish"
             android:gravity="center"
             android:ems="10"
-            android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true"
-            android:layout_alignParentRight="true"
             android:layout_alignParentEnd="true"
             android:background="@drawable/form_field_rectangle"
             android:padding="@dimen/box_padding"
@@ -107,7 +102,8 @@
             android:layout_marginStart="@dimen/box_margin_left"
             android:layout_marginRight="@dimen/box_margin_left"
             android:layout_marginEnd="@dimen/box_margin_left"
-            android:textColor="@color/colorMKSDriveGreen"/>
+            android:textColor="@color/colorMKSDriveGreen"
+            android:autofillHints="" />
 
         <EditText
             android:id="@+id/confirmNewPass"
@@ -120,9 +116,7 @@
             android:textColorHint="@color/colorBlackish"
             android:gravity="center"
             android:ems="10"
-            android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true"
-            android:layout_alignParentRight="true"
             android:layout_alignParentEnd="true"
             android:background="@drawable/form_field_rectangle"
             android:padding="@dimen/box_padding"
@@ -130,7 +124,8 @@
             android:layout_marginStart="@dimen/box_margin_left"
             android:layout_marginRight="@dimen/box_margin_left"
             android:layout_marginEnd="@dimen/box_margin_left"
-            android:textColor="@color/colorMKSDriveGreen"/>
+            android:textColor="@color/colorMKSDriveGreen"
+            android:autofillHints="" />
 
         <Button
             android:id="@+id/btnConfirm"
