--- a/app/src/main/res/layout/activity_folderview.xml
+++ b/app/src/main/res/layout/activity_folderview.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/colorWhitish">
-    <android.support.v7.widget.Toolbar
+    <androidx.appcompat.widget.Toolbar
         android:id="@+id/myToolbar"
         android:layout_width="match_parent"
         android:layout_height="?attr/actionBarSize"
@@ -24,7 +24,6 @@
         android:horizontalSpacing="@dimen/box_margin_left"
         android:layout_below="@+id/myToolbar"
         android:layout_alignParentBottom="true"
-        android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:padding="@dimen/box_padding"/>
 
