--- a/app/src/main/res/layout/activity_passwordreset.xml
+++ b/app/src/main/res/layout/activity_passwordreset.xml
@@ -12,7 +12,7 @@
         android:layout_height="wrap_content"
         android:background="@color/colorWhitish"
         android:fontFamily="sans-serif-condensed">
-        <android.support.v7.widget.Toolbar
+        <androidx.appcompat.widget.Toolbar
             android:id="@+id/myToolbar"
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
@@ -45,9 +45,7 @@
             android:gravity="center"
             android:layout_below="@+id/logoBox"
             android:id="@+id/textView"
-            android:layout_alignParentRight="true"
             android:layout_alignParentEnd="true"
-            android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true"
             android:background="@drawable/info_text_view_border"
             android:padding="@dimen/page_info_padding"
@@ -68,9 +66,7 @@
             android:textColorHint="@color/colorBlackish"
             android:gravity="center"
             android:ems="10"
-            android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true"
-            android:layout_alignParentRight="true"
             android:layout_alignParentEnd="true"
             android:background="@drawable/form_field_rectangle"
             android:padding="@dimen/box_padding"
@@ -78,7 +74,8 @@
             android:layout_marginStart="@dimen/box_margin_left"
             android:layout_marginRight="@dimen/box_margin_left"
             android:layout_marginEnd="@dimen/box_margin_left"
-            android:textColor="@color/colorMKSDriveGreen"/>
+            android:textColor="@color/colorMKSDriveGreen"
+            android:autofillHints="" />
 
         <LinearLayout
             android:layout_width="match_parent"
